2005-10-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/util.c: Include paxlib.
	* bootstrap: If file `.bootstrap' exists in the cwd and is
        readable, prepend its contents to the command line.

	Fix Debian bug 335580:
	
	* src/copyout.c (read_for_checksum,write_out_header): CRC is a
	32-bit unsigned value. Patch proposed by Jim Castleberry and
	Peter Vrabec. 
	* src/extern.h (crc): Change declaration
	* src/global.c: Likewise
	* src/tar.c (tar_checksum): Return unsigned int

	* THANKS: Add Jim Castleberry
	* NEWS: Updated
	
2005-09-30  Sergey Poznyakoff  <gray@gnu.org.ua>

	* src/copyout.c (process_copy_out): Discern between original and
	(eventually fixed) file name (in tar terminology, `file name'
	vs. `member name'.

2005-09-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* gnulib.modules: Add utimens
	* src/util.c (cpio_safer_name_suffix): Preserve ./ no matter what
	the value of strip_leading_dots is.
	(set_file_times): New function
	* src/extern.h (set_file_times): New function
	* src/copyin.c: Use set_file_times() to update file atime/mtime
	* src/copyout.c: Likewise.
	* src/copypass.c: Likewise.

2005-05-25  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* src/copyin.c: Use cpio_safer_name_suffix() and CPIO_TRAILER_NAME
	define instead of hardcoding the trailer file name.
	* src/copyout.c: Likewise.
	* src/cpio.h (CPIO_TRAILER_NAME): New define
	* src/extern.h (cpio_safer_name_suffix): New proto
	* src/tar.c: Use CPIO_TRAILER_NAME define instead of hardcoding
	the trailer file name.
	* src/util.c (cpio_safer_name_suffix): New function
	(add_cdf_double_slashes): Add FIXME warning.
	
	* lib/fatal.c: New file
	* lib/Makefile.tmpl (libcpio_a_SOURCES): Add fatal.c
	* src/copyout.c: Use error reporting functions from paxlib
	* src/makepath.c: Likewise
	* src/mt.c: Likewise
	* src/main.c (fatal_exit): Moved to lib/fatal.c

2005-05-24  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* src/copyin.c (process_copy_in): Use safer_name_suffix no matter